[package]
name = "runeo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
tokio = { version = "^1.0", features = ["full"] }
serde = { version = "^1.0" }
serde_derive = "^1.0"
serde_json = "^1.0"
spinners = "^2.0"
dotenv = "0.15.0"